--- a/package.json
+++ b/package.json
@@ -3,16 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.54.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^16.18.106",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-leaflet": "^3.0.0",
+    "axios": "^1.7.7",
+    "leaflet": "^1.9.4",
+    "leaflet-fullscreen": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
+    "redux": "^5.0.1",
+    "tailwindcss": "^3.4.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
